# vproducer

./: CMakeLists.txt  test.py
ext/: frame_queue.pyx  setup.py
src/: frame.hpp  frame_info.cpp  frame_info.hpp  futex.cpp  futex.hpp  producer.cpp  producer.hpp  reader.cpp  reader.hpp  serialize.hpp  shm_mutex.cpp  shm_mutex.hpp  shm_queue.cpp  shm_queue.hpp  type_traits.hpp  utils.cpp  utils.hpp
src/common/: cond_var.cpp  cond_var.hpp  futex.cpp  futex.hpp  semaphore.cpp  semaphore.hpp  serialize.hpp  shm_queue.cpp  shm_queue.hpp  type_traits.hpp  utils.cpp  utils.hpp
src/vproducer/: frame.hpp  frame_info.cpp  frame_info.hpp  main.cpp  producer.cpp  producer.hpp  reader.cpp  reader.hpp
